--- a/index.html
+++ b/index.html
@@ -5,23 +5,216 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma-rtl.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/debug.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <!-- <link rel="stylesheet" href="./css/debug.css" /> -->
     <title>Bulma Project #01</title>
+    <style>
+      .center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container">
+          <figure class="image center">
+            <img src="./img/bulma-logo.png" style="max-width: 160px;" />
+          </figure>
+        </div>
+      </div>
+    </section>
+
+    <section class="section has-background-light">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <article class="media notification is-primary">
+              <figure class="media-left">
+                <span class="icon is-medium">
+                  <i class="fab fa-2x fa-css3-alt"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">Bulma?</h1>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequatur, sit quaerat vero et vel quae quidem, ea id
+                    aliquam, totam assumenda earum numquam tenetur culpa
+                    obcaecati eligendi fugiat iste fugit.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="column">
+            <article class="media notification is-info">
+              <figure class="media-left">
+                <span class="icon is-medium">
+                  <i class="fas fa-2x fa-align-justify"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">...flexbox?</h1>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Nam dicta ipsum autem ad quod eos a minima provident
+                    nostrum, error ratione eius animi voluptas odit commodi
+                    labore? Impedit, laudantium recusandae.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="column">
+            <article class="media notification is-warning">
+              <figure class="media-left">
+                <span class="icon is-medium">
+                  <i class="fas fa-2x fa-shield-alt"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">...classes?</h1>
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Natus vitae nesciunt aliquam officiis nemo! In voluptate, ad
+                    excepturi adipisci tempora sapiente accusantium sunt quis
+                    amet, deleniti consequatur, laborum cumque illo.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section">
       <div class="container">
-        <h1 class="title">
-          Hello Bulma
-        </h1>
-        <p class="subtitle">My first website with <strong>Bulma</strong>.</p>
+        <div class="columns is-multiline">
+          <div class="column is-one-third">
+            <article class="media notification has-background-white">
+              <figure class="media-left">
+                <span class="icon">
+                  <i class="fas fa-lg fa-columns has-text-warning"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">Columns?</h1>
+                  <p class="subtitle is-size-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequatur, sit quaerat vero et vel quae quidem.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="column is-one-third">
+            <article class="media notification has-background-white">
+              <figure class="media-left">
+                <span class="icon has-text-info">
+                  <i class="fab fa-lg fa-wpforms"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">...Form</h1>
+                  <p class="subtitle is-size-5">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Nam dicta ipsum autem ad quod eos a minima provident.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+
+          <div class="column is-one-third">
+            <article class="media notification has-background-white">
+              <figure class="media-left">
+                <span class="icon has-text-danger">
+                  <i class="fas fa-lg fa-cubes"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">...classes?</h1>
+                  <p class="subtitle is-size-5">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Natus vitae nesciunt aliquam officiis nemo!
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="column is-one-third">
+            <article class="media notification has-background-white">
+              <figure class="media-left">
+                <span class="icon has-text-gray">
+                  <i class="fas fa-lg fa-cogs"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">...classes?</h1>
+                  <p class="subtitle is-size-5">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Natus vitae nesciunt aliquam officiis nemo!
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="column is-one-third">
+            <article class="media notification has-background-white">
+              <figure class="media-left">
+                <span class="icon has-text-primary">
+                  <i class="fas fa-lg fa-warehouse"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">Layout</h1>
+                  <p class="subtitle is-size-5">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Natus vitae nesciunt aliquam
+                    <strong>officiis</strong> nemo!
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="column is-one-third">
+            <article class="media notification has-background-white">
+              <figure class="media-left">
+                <span class="icon has-text-danger">
+                  <i class="fas fa-lg fa-cube"></i>
+                </span>
+              </figure>
+              <div class="media-content">
+                <div class="content">
+                  <h1 class="title is-size-4">Elements</h1>
+                  <p class="subtitle is-size-5">
+                    In voluptate, ad excepturi adipisci tempora sapiente
+                    accusantium sunt quis amet, deleniti consequatur, laborum
+                    cumque illo.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
       </div>
     </section>
   </body>
